# pyrit_cli

./: .env.template  .gitignore  Makefile  README.md  docker-compose.yml  noxfile.py  pyproject.toml
docs/: README.md  workshop-track.md
examples/: benchmark_report_enterprise_sample.html
examples/http_target/: ollama_openai_chat.req  sample_openai_chat.req
src/pyrit_cli/: HELP.md  __init__.py  __main__.py  ask_ai.py  cli.py  env_status.py  env_write.py  help_loader.py  telemetry.py
src/pyrit_cli/discover/: __init__.py  converter_image_run.py  converter_run.py  converters_list.py  datasets_inspect.py  datasets_list.py  jailbreak_templates_inspect.py  jailbreak_templates_list.py  scorers_eval.py  scorers_list.py  targets_list.py
src/pyrit_cli/redteam/: __init__.py  attack_run_summary.py  benchmark_attack.py  benchmark_path_overview.js  benchmark_report.py  benchmark_tangled_tree.js  converter_fallback.py  crescendo_attack.py  http_target_cli.py  jailbreak_prepended.py  multimodal_input.py  prompt_sending.py  red_teaming.py  tap_attack.py  targets.py
tests/: conftest.py  test_ask_ai_attachments.py  test_attack_run_summary.py  test_benchmark_attack.py  test_cli_image_and_multimodal.py  test_cli_smoke.py  test_converter_run.py  test_datasets_inspect.py  test_env_write.py  test_help_loader.py  test_http_target_cli.py  test_integration_scenarios.py  test_jailbreak_prepended.py  test_jailbreak_templates_inspect.py  test_jailbreak_templates_list.py  test_prompt_sending_config.py  test_red_teaming_config.py  test_registries.py  test_scorers_eval.py  test_targets_spec.py
(+3 files in other folders)
